# CloudPlayground

NginxK8SHandler/: Dockerfile  LICENSE  README.md  pyproject.toml
NginxK8SHandler/config/docker/config/: README.md  docker-compose.yaml
NginxK8SHandler/config/docker/config/nginx/: Dockerfile
NginxK8SHandler/config/k8s/: cluster-role.yaml
NginxK8SHandler/config/k8s/hello-node/: deployment.yaml
NginxK8SHandler/config/k8s/httpbin/: httpbin-deployment.yaml  httpbin-service.yaml
NginxK8SHandler/config/k8s/jupyter/: pv.yaml
NginxK8SHandler/config/k8s/jupyter/pv/: Untitled.ipynb  kube_config
NginxK8SHandler/config/k8s/mongodb/: mongo.yaml
NginxK8SHandler/config/k8s/mongodb/pv/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--8933619310347355091.wt  collection-2--8933619310347355091.wt  collection-4--8933619310347355091.wt  collection-7--8933619310347355091.wt  collection-9--8933619310347355091.wt  index-1--8933619310347355091.wt  sizeStorer.wt  (+5 more)
NginxK8SHandler/config/k8s/nginx/: init_config.yaml  nginx.yaml
NginxK8SHandler/config/k8s/ua/: ua.yaml
NginxK8SHandler/src/: api.py  ex.py  settings.py
NginxK8SHandler/src/K8SClient/: client.py
NginxK8SHandler/src/MongoObject/: client.py
PacketAnomalyDetection/: pyproject.toml  read_packets.py  sample.pcap  settings.py  test.py
PacketAnomalyDetection/TCPPacket/: gen.py  loader.py
PacketAnomalyDetection/config/httpbin/: httpbin-deployment.yaml  httpbin-service.yaml
PacketAnomalyDetection/config/kiali/: kiali.yaml
PacketAnomalyDetection/wiki/configurations/: istio.md  ksniff.md
(+17 files in other folders)
